--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -1,45 +1,11 @@
 .App {
-  text-align: center;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-  pointer-events: none;
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.App > .images {
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-items: flex-start;
+  flex-wrap: nowrap;
 }
 
-.App-link {
-  color: #61dafb;
-}
-
-.App img {
-  float: left;
-}
-
-.App .images {
-  clear: both;
-}
-
-.App .user {
-  float: left;
-} 
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.App > .selectorButtons {
 }
