feat: add ability to display in feet or inch

--- a/src/App.css
+++ b/src/App.css
@@ -48,6 +48,10 @@
   text-align: left;
 }
 
+.App .radio {
+  margin-bottom: 20px;
+}
+
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
